--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>  X  </title>
+    <script type="module" crossorigin src="/x/assets/index.17d4ab2d.js"></script>
+    <link rel="stylesheet" href="/x/assets/index.cbc43582.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/main.jsx"></script>
+    
   </body>
 </html>
